--- a/values/open-collector.yaml
+++ b/values/open-collector.yaml
@@ -7,9 +7,13 @@ config:
       tls: 
         insecure: true
     otlphttp: 
-      endpoint: http://loki:3100/otlp
+      endpoint: http://loki-gateway.obs/otlp
       tls: 
         insecure: true
+
+
+        
+
   extensions:
     # The health_check extension is mandatory for this chart.
     # Without the health_check extension the collector will fail the readiness and liveliness probes.
@@ -88,3 +92,17 @@ config:
           - jaeger
           - zipkin
 
+ports: 
+  metrics:
+    # The metrics port is disabled by default. However you need to enable the port
+    # in order to use the ServiceMonitor (serviceMonitor.enabled) or PodMonitor (podMonitor.enabled).
+    enabled: true
+    containerPort: 8888
+    servicePort: 8888
+    protocol: TCP
+serviceMonitor:
+  # The service monitor by default scrapes the metrics port.
+  # The metrics port needs to be enabled as well.
+  enabled: true
+  metricsEndpoints:
+    - port: metrics
