--- a/values/tempo.yaml
+++ b/values/tempo.yaml
@@ -44,10 +44,11 @@ tempo:
   multitenancyEnabled: false
   # -- If true, Tempo will report anonymous usage data about the shape of a deployment to Grafana Labs
   reportingEnabled: true
+  # -- Configuration options for the metrics generator alterado para true
   metricsGenerator:
     # -- If true, enables Tempo's metrics generator (https://grafana.com/docs/tempo/next/metrics-generator/)
-    enabled: false
-    remoteWriteUrl: "http://prometheus.monitoring:9090/api/v1/write"
+    enabled: true
+    remoteWriteUrl: "http://prometheus-kube-prometheus-prometheus.obs:9090/api/v1/write"
   # -- Configuration options for the ingester
   ingester: {}
   # -- Configuration options for the querier
