--- a/values/prom-values.yaml
+++ b/values/prom-values.yaml
@@ -14,6 +14,9 @@ prometheus:
             requests:
               storage: 50Gi
     enableRemoteWriteReceiver: true
+    additionalArgs:
+      - name: web.enable-otlp-receiver
+        value: ''
     remoteWrite: 
       - url: "http://prometheus-kube-prometheus-prometheus.obs:9090/api/v1/write"
         # basicAuth:
