feat: Adiciona configurações para alertmanager
- Adiciona configurações no kube-stack para ativar os receivers do alertmanager
- Cria alert-rule via crd, que contém a métrica observada
- troca o chart do loki, para uma versão de micro serviços que trabalha junto com tempo e Otel

--- a/values/open-collector.yaml
+++ b/values/open-collector.yaml
@@ -7,7 +7,7 @@ config:
       tls: 
         insecure: true
     otlphttp: 
-      endpoint: http://loki-loki-gateway.obs/otlp
+      endpoint: http://loki-gateway.obs/otlp
       tls: 
         insecure: true
     otlphttp/metrics:
